manifests/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8straining
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
