manifests/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: k8straining
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
spec:
  selector:
    matchLabels:
      app: redis
  serviceName: "azure-vote-back"
  replicas: 2
  template:
    metadata:
      labels:
        app: redis
      annotations:
    spec:
      containers:
      - name: redis
        image: redis:4.0.9
        command: ["redis-server"]
        args: ["/etc/redis.conf"]
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 200m
            memory: 128Mi
        ports:
        - name: redis
          containerPort: 6379
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -a $REDIS_PWD -h localhost ping"
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command:
            - sh
            - -c
            - "redis-cli -a $REDIS_PWD -h localhost ping"
          initialDelaySeconds: 15
          periodSeconds: 15       
        volumeMounts:
        - name: redis
          mountPath: /data
          subPath: data
        - name: redis
          mountPath: /etc/
          subPath: redis.conf
      volumes:
      #- name: redis
      #  emptyDir: {}
      - name: cm
        configMap:
          name: redis
  volumeClaimTemplates:
  - metadata:
      name: redis
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
