manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front
  namespace: k8straining
  labels:
    addonmanager.kubernetes.io/mode: Reconcile    
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: azure-vote-front
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-front-nodeport
  namespace: k8straining
  labels:
    addonmanager.kubernetes.io/mode: Reconcile  
spec:
  type: NodePort
  ports:
  - nodePort: 31080
    protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: azure-vote-front
---
apiVersion: v1
kind: Service
metadata:
  name: azure-vote-back
  namespace: k8straining
  labels:
    addonmanager.kubernetes.io/mode: Reconcile  
spec:
  type: ClusterIP
  ports:
  - name: redis
    port: 6379
    targetPort: redis
  clusterIP: None
  selector:
    app: redis
