manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vote
  namespace: k8straining
  labels:
    addonmanager.kubernetes.io/mode: Reconcile  
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vote-host.xip.io
    http:
      paths:
      - backend:
          serviceName: azure-vote-front
          servicePort: 80
        path: /
