manifests/networkpolicy.yml
# nc -z -v azure-vote-back.k8straining.svc.cluster.local 6379
# nc -z -v redis-0.azure-vote-back.k8straining.svc.cluster.local 6379
# nc -z -v azure-vote-front 80
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-front-to-back
  namespace: k8straining
  labels:
    addonmanager.kubernetes.io/mode: Reconcile  
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: azure-vote-front
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-back-to-back
  namespace: k8straining
  labels:
    addonmanager.kubernetes.io/mode: Reconcile  
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector:
        matchLabels:
          app: redis
